# AutomataDungeone

./: AutomataDungeone  CMakeCache.txt  CMakeLists.txt  CellAutomat.h  ImageProcessor.h  InstallDependencies.sh  Makefile  README.md  cmake_install.cmake  graphicalEngine.h  main.cpp
CellAutomat/: CellAutomat.h
demo/: demo1  demo2
